rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/ArePartialPeriodsAllowed__c.field-meta.xml
<CustomField>
    <fullName>ArePartialPeriodsAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ArePartialPeriodsAllowed</label>
    <type>Checkbox</type>
</CustomField>