rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/BillingFrequencyRC__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequencyRC__c</fullName>
    <label>BillingFrequencyRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>