rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/EndDateRC__c.field-meta.xml
<CustomField>
    <fullName>EndDateRC__c</fullName>
    <label>EndDateRC</label>
    <type>Date</type>
</CustomField>