rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/ListPriceRC__c.field-meta.xml
<CustomField>
    <fullName>ListPriceRC__c</fullName>
    <label>ListPriceRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>