rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/ListPriceTotal__c.field-meta.xml
<CustomField>
    <fullName>ListPriceTotal__c</fullName>
    <label>ListPriceTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>