rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/NetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>NetUnitPrice__c</fullName>
    <label>NetUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>