rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/NumberOfPricingTerms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPricingTerms__c</fullName>
    <label>NumberOfPricingTerms</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>