rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/PeriodBoundary__c.field-meta.xml
<CustomField>
    <fullName>PeriodBoundary__c</fullName>
    <label>PeriodBoundary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>