rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/PeriodBoundaryDay__c.field-meta.xml
<CustomField>
    <fullName>PeriodBoundaryDay__c</fullName>
    <label>PeriodBoundaryDay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>