rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/ProductSellingModelId__c.field-meta.xml
<CustomField>
    <fullName>ProductSellingModelId__c</fullName>
    <label>ProductSellingModelId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>