rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/ProductSellingModelType__c.field-meta.xml
<CustomField>
    <fullName>ProductSellingModelType__c</fullName>
    <label>ProductSellingModelType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Term-Defined</fullName>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>