rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/QuantityRC__c.field-meta.xml
<CustomField>
    <fullName>QuantityRC__c</fullName>
    <label>QuantityRC</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>