rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/SalesItemType__c.field-meta.xml
<CustomField>
    <fullName>SalesItemType__c</fullName>
    <label>SalesItemType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>