rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/StartDateRC__c.field-meta.xml
<CustomField>
    <fullName>StartDateRC__c</fullName>
    <label>StartDateRC</label>
    <type>Date</type>
</CustomField>