rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/StartingPriceTotal__c.field-meta.xml
<CustomField>
    <fullName>StartingPriceTotal__c</fullName>
    <label>StartingPriceTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>