rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/StartingUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>StartingUnitPrice__c</fullName>
    <label>StartingUnitPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>