rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/StartingUnitPriceSource__c.field-meta.xml
<CustomField>
    <fullName>StartingUnitPriceSource__c</fullName>
    <label>StartingUnitPriceSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>