rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <label>StockKeepingUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>