rc/rc-pilot/main/default/objects/SBQQ__QuoteLine__c/fields/TotalAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustmentAmount__c</fullName>
    <label>TotalAdjustmentAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>